src/tests/Loader/classloader/generics/Instantiation/Negative/Type_ofT_Inherit_FromT.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="Type_ofT_Inherit_FromT.il" />
  </ItemGroup>
</Project>
